[tool.poetry]
name = "social-web"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "social_web"}]

[tool.poetry.dependencies]
python = "^3.8"
twitter = "^1.19.6"
prettytable = "^3.5.0"
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
